[package]
name = "git_lib"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["David Pitoniak"]
repository = "https://github.com/pitoniak32/git_repo"
description = "library for git cli commands, and git repo operations"
keywords = ["git", "repository"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
git-url-parse = "0.4.4"
log = "0.4.20"
thiserror = "1.0.50"

[dev-dependencies]
assert_fs = "1.1.1"
predicates = "3.1.0"
rstest = "0.18.2"
similar-asserts = "1.5.0"
